syntax = "proto3";
/*
		ID int64 `gorm:"primary_key;auto_increment;not_null" json:"id"`
		Name string `json:"name"`
		Nums string `json:"nums"`//工号
		Sex string `json:"sex"` //性别
		Level int64 `json:"level"`//等级
		Score int64 `json:"score"`//信誉分
		Place string `json:"place"`//住址
		Telephone string `json:"telephone"`//电话
		Mail string `json:"mail"`
		Description string `json:"description"`//补充描述
		ISWork bool `json:"is_work"`//是否在职
*/
package works;

option go_package = "proto;works";

service Works {
	rpc CreateWorker(Request_Workers)returns(Response_CreateWorker);
	rpc UpdateWorker(Request_Workers)returns(Response_CreateWorker);
	rpc DeleteWorkerByID(Request_Workers_ID)returns(Response_Workers);
	rpc FindWorkerByID(Request_Workers_ID)returns(Response_Worker_Show);
	rpc FindWorkerByNums(Request_Workers_Nums)returns(Response_Worker_Show);
	rpc FindWorkerByName(Request_Workers_Name)returns(Response_Workers_Show);
	rpc FindAll(Request_Null)returns(Response_Workers_Show);
	rpc CreateToken(LoginRequest)returns(LoginResponse);
}
message LoginRequest{
	string user = 1;
	string password = 2;//未加密的password
}
message LoginResponse{
	bool code = 1;
	string token = 2;//返回一个string类型的token由gin的header进行返回
}
message Request_Null{}
message Request_Workers{
	string Name = 1;
	string Nums = 2;
	string Sex = 3;
	int64 Level = 4;
	int64 Score = 5;
	string Place = 6;
	string Telephone = 7;
	string Mail = 8;
	string Description = 9;
	bool ISWork = 10;
	string username = 11;
	string password = 12;
}
message Response_CreateWorker{
	int64 id = 1;
	string message = 2;
}
message Request_Workers_ID{
	int64 id = 1;
}
message Request_Workers_Nums{
	int64 nums = 1;
}
message Request_Workers_Name{
	string name = 1;
}
message Response_Workers{
	string message = 1;
}
message Response_Worker_Show{
	Response_Workers_Info worker= 1;
}
message Response_Workers_Show{
	repeated Response_Workers_Info workers = 1;
}
message Response_Workers_Info{
	int64 ID = 1;
	string Name = 2;
	string Nums = 3;
	string Sex = 4;
	int64 Level = 5;
	int64 Score = 6;
	string Place = 7;
	string Telephone = 8;
	string Mail = 9;
	string Description = 10;
	bool ISWork = 11;
}